# api-rust-salvo-rbatis

./: Cargo.toml  README.md
src/: database.rs  main.rs  routes.rs
