[package]
name = "api-tasks-salvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["logging"] }
tokio = { version = "1", features = ["macros", "full"] }
log = "0.4"
fast_log = "1.5"
serde = { version = "1", features = ["derive"] }
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-mysql={version="0.1"}
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.12.0"
